# chatbox-modelscope-sync-mcp

./: .gitignore  mkdocs.yml  pyproject.toml  readme.md  test.py
chatbox_modelscope_sync_mcp/: __init__.py  cli.py  sync.py
docs/: index.md
docs/api/: cli.md  index.md  sync.md
mkgenerate/: generate_docs.py  mkinfo.json
scripts/: linux_mac.sh  windows.bat
