# pyproject.toml

# 1. 构建系统配置 (Build System Configuration)
#    - 告诉pip如何构建你的项目。这部分通常是固定的。
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 2. 项目元数据 (Project Metadata)
#    - 这是关于你的包的核心信息，PyPI会展示这些内容。
[project]
name = "chatbox-modelscope-sync-mcp"
version = "0.0.1"
authors = [
    { name = "ztxtech", email = "ztxtech@foxmail.com" },
]
description = "一键同步ModelScope MCP服务器到Chatbox配置的Python工具"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "chatbox",
    "modelscope",
    "mcp",
    "sync",
    "automation",
    "configuration",
    "http-server"
]

# PyPI上的分类器
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

# 项目依赖项
dependencies = [
    "requests",
    "click",
]

# 3. 项目链接 (Project URLs)
#    - 在PyPI侧边栏显示的链接
[project.urls]
Homepage = "https://github.com/ztxtech/chatbox-modelscope-sync-mcp"
Repository = "https://github.com/ztxtech/chatbox-modelscope-sync-mcp"
Documentation = "https://github.com/ztxtech/chatbox-modelscope-sync-mcp#readme"
"Bug Tracker" = "https://github.com/ztxtech/chatbox-modelscope-sync-mcp/issues"

# 控制台脚本入口点
[project.scripts]
chatbox-modelscope-sync = "chatbox_modelscope_sync_mcp.cli:main"
chatbox-mcp-sync = "chatbox_modelscope_sync_mcp.cli:main"

# 可选的开发依赖
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

# 4. Setuptools 工具配置 (Tool Configuration)
#    - 告诉setuptools如何找到你的包
[tool.setuptools.packages.find]
# 自动发现项目根目录下的所有包
where = ["."]